[package]
name = "joplin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "joplintool"

[profile.release]
strip = "debuginfo"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
mail-parser = "0.9.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json", "multipart" ] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["local-offset", "formatting", "macros"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4"] }
